@@ -186,6 +186,7 @@ miniapps/toys/life
 miniapps/toys/mandel
 miniapps/toys/rubik
 miniapps/toys/snake
+miniapps/toys/lissajous
 
 miniapps/toys/snake-init.mesh
 miniapps/toys/snake-user.mesh
@@ -197,6 +198,8 @@ miniapps/toys/rubik-init.mesh
 miniapps/toys/mandel.mesh
 miniapps/toys/life.gf
 miniapps/toys/life.mesh
+miniapps/toys/lissajous.mesh
+miniapps/toys/lissajous.gf
 
 miniapps/nurbs/ex1
 miniapps/nurbs/ex1p
